# topreconstruction

./: .gitignore  Makefile  README.md  README_legacy_scripts.md  agent.md  branches.txt  cutflow_and_store.py  dataset_build.py  dataset_prepare.py  diagnose_triplet_interpretation.py  infer.py  inspect_selected_events.py  inspect_ttbar.py  io.py  main.py  plot_jets.py  plot_truth_triplet_0.py  plot_truth_triplet_optimized.py  plotting.py  print_ttree_branches.py  quick_truth_triplet.py  run_intruction.md  top_reco_performance_plots.tex  train.py  triplet_io.py  triplet_reco.py  validate_triplet_interpretation.py
analysis/: README.md  diagnose_triplet_interpretation.py  plot_truth_triplet_0.py  plot_truth_triplet_optimized.py  quick_truth_triplet.py  triplet_reco.py  validate_triplet_interpretation.py
automation/: README.md  analysis_only.recipe.yaml  compare_strategies.py  full_chain.recipe.yaml  infer_plus_analysis.recipe.yaml  run_manifest.schema.json  strategy_compare.recipe.yaml  write_manifest.py
data_processing/: README.md  (+5 more)
top_reco/: Makefile  README.md  log.md  pyproject.toml  study
top_reco/configs/: xgb_hyperparameters.json
top_reco/docs/: branch_interpretation.md  future_development.md  plottinginvariants.md  run_last10k_inference.md  schema.md
top_reco/src/triplet_ml/: __init__.py  cli.py  features.py  plotting.py  progress.py  select_triplets.py  strategy_compare.py  triplet_io.py
top_reco/src/triplet_ml/models/: xgb_model.py
top_reco/tests/: test_select_triplets_efficiency.py  test_strategy_comparison.py  test_strategy_threshold_behavior.py
(+31 files in other folders)
