[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triplet-ml-pipeline"
version = "0.1.0"
description = "ROOT-to-triplet dataset pipeline for XGBoost and TabPFN training/inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "uproot>=5",
  "awkward>=2",
  "pyarrow>=14",
  "xgboost>=1.7",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
tabpfn = ["tabpfn>=0.1"]

[project.scripts]
triplet-ml = "triplet_ml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
